style change complete. need to work out text wrap issues.

--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@
     text-transform: uppercase;
     background-color: transparent;
     padding-bottom: 30%;
+    width: 225px;
 }
 
 #button {
